(rule
 (target meet_test.output)
 (deps meet_test.exe)
 (action
  (with-stderr-to
   %{target}
   (run %{deps}))))

(rule
 (alias runtest)
 (action
  (diff meet_test.expected meet_test.output)))

(executable
 (name meet_test)
 (modes native)
 (instrumentation (backend bisect_ppx))
 (libraries
  ocamloptcomp ocamlcommon
  flambda2_bound_identifiers flambda2_cmx flambda2_identifiers flambda2_kinds
  flambda2_nominal flambda2_numbers flambda2_term_basics flambda2_types))

(include_subdirs no)

(dirs algorithms lib mlexamples tools api_tests)
