(rule
 (target extension_meet.output)
 (deps extension_meet.exe)
 (action
  (with-stderr-to
   %{target}
   (run %{deps}))))

(rule
 (alias runtest)
 (action
  (diff extension_meet.expected extension_meet.output)))

(executable
 (name extension_meet)
 (modes native)
 (instrumentation (backend bisect_ppx))
 (modules extension_meet)
 (libraries
  ocamloptcomp ocamlcommon
  flambda2_bound_identifiers flambda2_cmx flambda2_identifiers flambda2_kinds
  flambda2_nominal flambda2_numbers flambda2_term_basics flambda2_types))

(rule
 (target datalog.output)
 (deps datalog.exe)
 (action
  (with-stderr-to
   %{target}
   (run %{deps}))))

(rule
 (alias runtest)
 (action
  (diff datalog.expected datalog.output)))

(executable
 (name datalog)
 (modes native)
 (instrumentation (backend bisect_ppx))
 (modules datalog)
 (libraries flambda2_datalog))
